--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git_course</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <h1>hello git</h1>
+    
 </body>
 <script src="script.js"></script>
-</html>  
+</html>
